<resources>
    <string name="app_name">FTAProject</string>
    <string name="welcomepage">FIND THEM ALL</string>
    <string name="onglet_camera">Appareil photo</string>
    <string name="onglet_people">Amis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory">Inventaire</string>
    <string name="friends">Amis</string>
    <string name="camera">Appareil photo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="findthemall">Find them all</string>
    <string name="login">Identifiant</string>
    <string name="password">mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="server_client_id">492094712986-4tm8505od2rsbm9q6jm2erqo8q2j7unr.apps.googleusercontent.com</string>
    <string name="googleconnect">S\'authentifier avec Google</string>
    <string name="select_options">Selectionner les options</string>
    <string name="user_profile">Profil Utilisateur</string>
    <string name="logout">Se Déconnecter</string>
    <string name="firstname">Prénom :</string>
    <string name="lastname">Nom :</string>
    <string name="email">Email :</string>
    <string name="last_item">Dernier item scanné</string>
</resources>
