<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.guitton.candice.ftaproject.HomePageActivity">
    <RelativeLayout
        android:id="@+id/homePageTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TitleFragment">

        <TextView
            android:id="@+id/titlefragmentinventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/findthemall"
            style="@style/TitleHomePage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/titlefragmentinventory"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            >

            <EditText
                android:id="@+id/edit_login"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/titlefragmentinventory"
                android:layout_centerHorizontal="true"
                android:hint="@string/login" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/edit_login"
                android:layout_centerHorizontal="true"
                android:hint="@string/password" />

            <Button
                android:id="@+id/connexion_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/connect"
                android:layout_below="@+id/edit_password"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

    </RelativeLayout>



<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Image
            android:id="@+id/last_item_img"
            android:layout_width="200dp"
            android:layout_height="150dp" />
        <TextView
            android:id="@+id/last_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventory"/>
    </LinearLayout>-->


</android.support.constraint.ConstraintLayout>
