<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relative_layout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titlefragmentinventory"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/user_profile"
                style="@style/TitleFragment"
                android:padding="10dp"
                />

            <ImageButton
                android:id="@+id/inventory_return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_inventory"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"/>
        </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/relative_layout"
            android:layout_marginLeft="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textSize="15dp"
            />
            <TextView
                android:id="@+id/user_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/item_avatar"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"

                android:layout_toRightOf="@+id/item_avatar"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textSize="15dp"
            />
            <TextView
                android:id="@+id/user_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/user_firstname"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:layout_toRightOf="@+id/user_lastname"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />


        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/user_qrcode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />
    <Button
        android:id="@+id/button_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>